[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[dependency-groups]
test = ["pytest", "coverage"]

[tool.bandit]
skips = ["B101"]

[tool.black]
line-length = 120

[tool.flake8]
extend-ignore = ["E203", "E501", "E704", "W503"]
max-line-length = 120

[tool.isort]
profile = "black"
skip_glob = ["src/senzing_grpc/pb2_grpc/*"]
src_paths = ["examples", "src", "tests"]

[[tool.mypy.overrides]]
module = "senzing_abstract.szengineflags.*"
ignore_missing_imports = "true"
warn_unused_ignores = "false"

[[tool.mypy.overrides]]
module = "senzing_grpc.*"
disable_error_code = [
    "attr-defined",
    "no-untyped-call"
]
follow_imports = "skip"
strict = "true"


[tool.pylint]
disable = [
    "broad-except",
    "consider-using-f-string",
    "import-error",
    "line-too-long",
    "not-callable",
    "too-many-branches",
    "too-many-lines",
    "too-many-locals"
]
ignore = [
    "__init__.py"
]
notes = [
    "FIXME"
]
